UI and backend changes
